# benchmark-template

./: .env  .gitignore  CMakeLists.txt  README.md  justfile
cmake/: helpers.cmake
src/: cx.hpp  template.cpp
